# template_python

./: 404.html  Dockerfile  Makefile  README.md  dev.dockerfile  docker-compose.yml  index.html  main.py  mkdocs.yml  pyproject.toml  setup.cfg
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
scripts/: build.sh  deploy.sh
tests/: test_api.py
web/: api.py
