[tool.poetry]
name = "web"
version = "0.1.0"
description = "Template web application using python."
authors = ["Nick Anthony <nanthony007@gmail.com>"]
license = "GNU"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.61.2"
uvicorn = "^0.12.3"
pydantic = "^1.7.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.790"
isort = "^5.6.4"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
