[tool.poetry]
name = "template_python"
version = "0.1.0"
description = "Sample python template"
authors = ["Nick Anthony <nanthony007@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.2"
uvicorn = "^0.12.3"
graphene = "^2.1.8"

[tool.poetry.dev-dependencies]
isort = "^5.6.4"
flake8 = "^3.8.4"
mypy = "^0.790"
black = "^20.8b1"
pytest = "^6.1.2"
mkdocs = "^1.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
